tests/fixtures/positive/style/UnusedPrivateClass.kt
package fixtures.positive.style

private class Helper {
    fun doWork() {
        println("working")
    }
}

fun main() {
    println("No one references the class above")
}
